--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@tensorflow-models/mobilenet": "^2.1.1",
     "@tensorflow/tfjs": "^4.22.0",
-    "html2canvas": "^1.4.1",
+    "html-to-image": "^1.11.13",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
